--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 jar {
-    baseName = 'som-rest-service'
+    baseName = 'gov.michigan'
     version =  '0.1.0'
 }
 
@@ -26,6 +26,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile 'mysql:mysql-connector-java'
+
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
 
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
