--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ targetCompatibility = 1.8
 dependencies {
     compile 'mysql:mysql-connector-java'
 
+    compile 'joda-time:joda-time:2.9.9'
+
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
 
