--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
 
+    /*compile group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'
+    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.7'*/
+
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
